# cub-scout-advancement-reporting

./: .gitignore  .pre-commit-config.yaml  README.md  list_missing_images.py  models.py  parser.py  pyproject.toml  pyrightconfig.json  reportbuilder.csv  reportbuilder.csv.bk  reports.py  requirements.json  ruff.toml  scout_report_pdf.py
tests/: test_parser.py  test_validation.py
tests/fixtures/: csv_no_lion_section.csv  csv_unknown_rank.csv  minimal_csv_valid.csv  minimal_requirements.json  requirements_missing_lion.json
