[project]
name = "cub-scout-advancement-reporting"
version = "0.1.0"
description = "Script to help Den Leaders and Cubmasters track scout advancement and create report cards"
requires-python = ">=3.10"

dependencies = [
    "loguru>=0.7.3",
    "pandas",
    "qrcode[pil]",
    "reportlab",
]

[tool.uv]
dev-dependencies = [
    "basedpyright",
    "pre-commit",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
