[project]
name = "cub-scout-advancement-reporting"
version = "0.1.0"
description = "Script to help Den Leaders and Cubmasters track scout advancement and create report cards"
requires-python = ">=3.10"

[dependency-groups]
main = [
    "loguru>=0.7.3",
    "pandas",
    "qrcode[pil]",
    "reportlab",
]
dev = [ 
    "basedpyright~=1.38.2",
    "pre-commit~=4.5.1",
    "pytest~=9.0.2",
    "ruff~=0.15.5"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
